--- a/report/report.org
+++ b/report/report.org
@@ -39,6 +39,9 @@
 ** each pattern generated in a square 2d plane
 ** grid 81x81 = 6561 cells
 ** 2 class problem created from each pattern
+*** 2 classes of 1 and 2 with 0 representing undetermined
+*** the grid was divided into 2 categories, ie 1 within shape one without
+** 
 * Multidimensional data mining (> 2d)
 ** Grid definition
 ** Grid size
